fixed cast storage to store dancer position index as well, for gaps in the cast between dancer position index

--- a/frontend/rolecall/src/app/cast/cast-drag-and-drop.component.scss
+++ b/frontend/rolecall/src/app/cast/cast-drag-and-drop.component.scss
@@ -44,10 +44,12 @@ $cellHeight: 4rem;
   &ColHeader {
     font-size: large;
     font-weight: bold;
+    vertical-align: middle;
   }
   &RowHeader {
     font-size: large;
     font-weight: bold;
+    vertical-align: middle;
   }
   &BothHeader {
   }
